infrastructure/kubernetes/app/zot-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: zot
    namespace: zot
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - zot.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: zot
                port: 5000
                group: ""
                kind: Service
                weight: 1
